--- a/css/style.css
+++ b/css/style.css
@@ -2489,7 +2489,27 @@ figure.vimeo a img, figure.youtube a img {
 	display: inline-block;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear; 
+} 
+
+.social a{
+	position: relative;
+	text-align: center;
+	margin-top: 7px;
+	margin-bottom: 7px;
+    font-family: 'Poppins', sans-serif;
+	font-size: 14px;
+	font-weight: 500;
+	letter-spacing: 1px;
+	color: #fff;
+	display: inline-block;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear; 
+} 
+
+.social a:hover{
+	opacity: 0.5;
 }
+
 .social-fixed a:hover{
 	opacity: 0.5;
 }
